# body-models

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  mkdocs.yml  new_design.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  slow-tests.yml
bench/: garment_forward_vertices.py  run.py  soma_forward.py  test_min_versions.py
crates/body-models-wasm/: Cargo.toml
crates/body-models-wasm/examples/: bench.rs
crates/body-models-wasm/src/: cpu_backend.rs  forward_kinematics.rs  gpu_backend.rs  gpu_forward.rs  js_api.rs  lib.rs  model_data.rs  npz_loader.rs  rodrigues.rs  smplx_cpu_backend.rs  smplx_model_data.rs  smplx_npz_loader.rs  sparse_lbs.rs
crates/body-models-wasm/src/shaders/: lbs.wgsl  pose_blend.wgsl  shape_blend.wgsl
crates/body-models-wasm/tests/: test_cpu.rs  test_gpu.rs  test_smplx_cpu.rs
crates/body-models-wasm/tests/common/: mod.rs
crates/body-models-wasm/tests/reference_data/: meta.json
docs/: architecture.md  index.md
docs/extras/: viser-plugin.md
docs/models/: anny.md  brainco.md  flame.md  g1.md  garment-measurements.md  mano.md  mhr.md  myofullbody.md  skel.md  smpl-humanoid.md  smpl.md  smplh.md  smplx.md  soma.md
scripts/: bench_commit.sh  bench_devices.py  bench_summary.py  benchmark.py  generate_flame_reference.py  generate_smplx_reference.py  mapping.py  render_teaser.py  visualize_bodies.py  visualize_models.py  visualize_robots.py
scripts/teaser/: export_readme_meshes.py  render.py  render_readme_blender.py  run_teaser.sh
src/body_models/: __init__.py  _torch_state.py  base.py  cache.py  catalog.py  cli.py  common.py  config.py  constants.py  download.py  fetch.py  registry.py  rigid.py  rotations.py  runtime.py  state.py
src/body_models/anny/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  io.py  jax.py  model.py  numpy.py  pose.py  torch.py
src/body_models/anny/assets/: poses.npz
src/body_models/anny/backends/: core.py  jax.py  numba.py  numpy.py  torch.py  warp.py
src/body_models/bodies/anny/: __init__.py  constants.py  core.py  io.py  jax.py  model.py  numpy.py  pose.py  torch.py
src/body_models/bodies/garment_measurements/: __init__.py  constants.py  core.py  generate_asset.py  io.py  jax.py  model.py  numpy.py  pose.py  torch.py
src/body_models/bodies/mhr/: constants.py  core.py  io.py  jax.py  model.py  numpy.py  pose.py  torch.py
src/body_models/bodies/smpl/: __init__.py  constants.py  core.py  io.py  jax.py  model.py  numpy.py  torch.py
src/body_models/bodies/smplh/: constants.py  core.py  io.py  jax.py  model.py  numpy.py  torch.py
src/body_models/bodies/smplx/: constants.py  core.py  (+5 more)
src/body_models/brainco/: __init__.py  _numpy_impl.py  constants.py  core.py  io.py  jax.py  numpy.py  torch.py
src/body_models/common/: __init__.py  chumpy_fix.py  deformation.py  kinematics.py  model_io.py  ops.py  pose_assets.py  rigid.py  simplify_mesh.py  skinning.py  stl.py  warp.py
src/body_models/extras/: __init__.py  viser_plugin.py
src/body_models/flame/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  io.py  jax.py  model.py  numpy.py  torch.py
src/body_models/g1/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  io.py  jax.py  numpy.py  torch.py
src/body_models/garment_measurements/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  generate_asset.py  io.py  jax.py  numpy.py  pose.py  torch.py
src/body_models/mano/: __init__.py  constants.py  core.py  io.py  jax.py  numpy.py  torch.py
src/body_models/mhr/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  io.py  jax.py  model.py  numpy.py  pose.py  torch.py
src/body_models/myofullbody/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  io.py  jax.py  numpy.py  torch.py
src/body_models/robots/: mjcf.py
src/body_models/skel/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  io.py  jax.py  model.py  numpy.py  torch.py
src/body_models/smpl/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  convert.py  core.py  download.py  io.py  jax.py  model.py  numpy.py  torch.py
src/body_models/smpl_humanoid/: __init__.py  jax.py  numpy.py  torch.py
src/body_models/smplh/: __init__.py  constants.py  core.py  io.py  jax.py  numpy.py  torch.py
src/body_models/smplx/: __init__.py  _jax_impl.py  _numpy_impl.py  _torch_impl.py  constants.py  core.py  io.py  jax.py  model.py  numpy.py  torch.py
src/body_models/soma/: __init__.py  _identity_torch.py  constants.py  core.py  io.py  jax.py  numpy.py  pose.py  torch.py
tests/: accelerator_utils.py  conftest.py  env_utils.py  garment_measurements_asset.py  generate_anny_reference.py  generate_mhr_reference.py  gradient_utils.py  model_assets.py  model_cases.py  model_io_helpers.py  smpl_humanoid.xml  test_anny.py  test_anny_safe_orientation.py  test_array_annotations.py  test_backend_consistency.py  test_backend_exports.py  test_brainco_io.py  test_catalog.py  test_common.py  test_compile.py  test_config.py  test_deformation.py  test_download.py  test_fetch.py  test_flame.py  test_g1.py  test_g1_io.py  test_garment_measurements.py  test_garment_measurements_io.py  test_gradients.py  test_io.py  test_kinematics.py  test_mano.py  test_mhr.py  test_mhr_pose.py  test_model_interface.py  test_model_paths.py  test_myofullbody.py  test_reference_outputs.py  test_runtime.py  (+12 more)
tests/assets/anny/: bone_labels.json
tests/flame/: test_flame.py  test_io.py
tests/generate_assets/: generate_anny_reference.py  generate_flame_reference.py  generate_g1_fixture.py  generate_garment_measurements_reference.py  generate_mhr_reference.py  generate_skel_reference.py  generate_smpl_reference.py  generate_smplx_reference.py
tests/mano/: test_io.py  test_mano.py
tests/replication/: repro_body_models_soma_layer_output_mismatch.py
tests/smpl/: test_io.py  test_smpl.py
tests/smplh/: test_io.py  test_smplh.py
tests/smplx/: test_io.py  test_smplx.py
(+361 files in other folders)
