[project]
name = "body-models"
version = "0.17.0"
description = "Multi-backend parametric body models (SMPL, SMPLH, SMPLX, FLAME, SKEL, ANNY, MHR, SOMA, GarmentMeasurements, BrainCo, G1) for NumPy, PyTorch, and JAX"
readme = "README.md"
authors = [
    { name = "Andrea Boscolo Camiletto", email = "abcamiletto@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "array-api-compat>=1.14.0",
    "jaxtyping>=0.2.28",
    "nanomanifold>=0.8.0",
    "numpy>=2.0.0",
    "platformdirs>=4.6",
    "ptloader==0.3.0",
    "pyfqmr>=0.3.0",
    "scipy>=1.13.0",
    "trimesh>=4.0.0",
    "typer>=0.9.0",
]

[project.scripts]
body-models = "body_models:main"

[project.optional-dependencies]
torch = [
    "torch>=2.3.0",
]
jax = [
    "jax>=0.4.33",
    "flax>=0.10.0",
]
numba = [
    "numba>=0.65.1",
]
warp = [
    "warp-lang>=1.12.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "ty>=0.0.1a13",
    # Include optional backends for type checking
    "torch>=2.3.0",
    "jax>=0.4.33",
    "flax>=0.10.0",
    "numba>=0.65.1",
    "warp-lang>=1.12.0",
    "py-soma-x>=0.2.1",
    "anny>=0.3.1",
    "smplx>=0.1.28",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ty.src]
exclude = [
    "bench/",
    "tests/",
    "scripts/render_teaser.py",
    "scripts/visualize_bodies.py",
    "scripts/visualize_robots.py",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F722",  # jaxtyping annotations use syntax ruff doesn't understand
    "F821",  # jaxtyping dimension names appear as undefined
    "E741",  # ambiguous variable names (I, l, O) are standard in math notation
]

[tool.pytest.ini_options]
markers = [
    "fast: tests included in pull request CI",
    "slow: exhaustive or compiler-heavy tests excluded from fast CI",
]
